<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navCall"
            android:icon="@mipmap/ic_menu_call"
            android:title="@string/menu_call" />
        <item
            android:id="@+id/navFriends"
            android:icon="@mipmap/ic_menu_friend"
            android:title="@string/menu_friends" />
        <item
            android:id="@+id/navLocation"
            android:icon="@mipmap/ic_menu_location"
            android:title="@string/menu_Location" />
        <item
            android:id="@+id/navMail"
            android:icon="@mipmap/ic_menu_mail"
            android:title="@string/menu_Mail" />
        <item
            android:id="@+id/navTask"
            android:icon="@mipmap/ic_menu_task"
            android:title="@string/menu_Tasks" />
    </group>
</menu>